Made following-up updates for the automatic draws
Refactored the autoDraw() with runAutoDrawLogic() method

Added unit tests for the corresponding features.

This function is the sequential result for US 02.05.02 and handles US 02.05.03 as an important pattern.